--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,3 +16,71 @@
 @import url('./badges.css');
 @import url('./back-link.css');
 @import url('./footer.css');
+
+/* 1st task */
+
+.gallery {
+  display: flex;
+  gap: 20px;
+  flex-wrap: wrap;
+  justify-content: center;
+  margin: 20px 160px;
+}
+
+.gallery-item {
+  width: calc((100% - 40px)/3);
+  height: auto;
+}
+
+.gallery-image {
+  width: 100%;
+  height: 100%;
+  transition: 300ms ease-in-out;
+}
+
+.gallery-image:hover {
+  transform: scale(1.05);
+}
+
+/* 2nd task */
+
+.feedback-form {
+  padding: 30px;
+  border-radius: 12px;
+  max-width: 400px;
+  margin: 0 auto;
+  font-family: sans-serif;
+}
+
+.feedback-form label {
+  display: block;
+  margin-bottom: 20px;
+}
+
+.feedback-form input,
+.feedback-form textarea {
+  width: 100%;
+  padding: 12px 16px;
+  box-sizing: border-box;
+  border: 1px solid #ccc;
+  border-radius: 8px;
+  margin-top: 5px;
+  outline: none;
+  transition: border-color 0.2s ease-in-out;
+}
+
+.feedback-form textarea {
+  resize: none;
+}
+
+.feedback-form button[type="submit"] {
+  background-color: #4E75FF;
+  color: white;
+  padding: 12px 24px;
+  border: none;
+  border-radius: 8px;
+  font-size: 18px;
+  text-align: center;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out, transform 0.1s ease-in-out;
+}
